--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@sodaru/yup-to-json-schema": "^2.0.1",
 		"axios": "^1.6.8",
+		"canvas": "^2.11.2",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"nodemon": "^3.1.0",
